fix overflow

--- a/app/styles/tracks.css
+++ b/app/styles/tracks.css
@@ -1,3 +1,7 @@
+.remix-app {
+  overflow-x: hidden;
+}
+
 .wrapper {
   margin-bottom: 50vh;
 }
